# meme-launch-manager

./: .env.example  .gitignore  README.md  pyproject.toml
src/meme_launch_manager/: main.py
src/meme_launch_manager/crews/meme_data_generator/: meme_data_generator.py
src/meme_launch_manager/crews/meme_data_generator/config/: agents.yaml  tasks.yaml
src/meme_launch_manager/crews/meme_deployer/: meme_deployer.py
src/meme_launch_manager/crews/meme_deployer/config/: agents.yaml  tasks.yaml
src/meme_launch_manager/crews/trending_scraper/: trending_scraper.py
src/meme_launch_manager/crews/trending_scraper/config/: agents.yaml  tasks.yaml
src/meme_launch_manager/crews/website_developer/: website_developer.py
src/meme_launch_manager/crews/website_developer/config/: agents.yaml  tasks.yaml
src/utils/: cli.py  deploy_website.py  metadata_manager.py  selection.py  trends_io.py  user_selectors.py
templates/: layouts.json  palettes.json
