[project]
name = "meme_launch_manager"
version = "0.1.0"
description = "meme-launch-manager using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.148.0,<1.0.0",
    "tavily-python>=0.7.10",
]

[project.scripts]
kickoff = "meme_launch_manager.main:kickoff"
run_crew = "meme_launch_manager.main:kickoff"
plot = "meme_launch_manager.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
